:sparkles: feat: add copy order functionality

--- a/src/index.html
+++ b/src/index.html
@@ -146,7 +146,7 @@
                             <input type="text" class="form-control" id="product-category" placeholder="Digite a categoria do produto">
                         </div>
 
-                        <label for="import-products" class="cta cta-outline">
+                        <label for="import-products" class="cta cta-secondary">
                             <i class="ph ph-file-csv"></i>
                             Importar de CSV
                         </label>
