:art: style: add color theme toggle

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR" class="dark">
+<html lang="pt-BR" class="">
 <head>
     <meta charset="UTF-8">
 
@@ -43,6 +43,10 @@
                         Pedidos
                     </a>
                 </nav>
+
+                <button id="theme-toggle" class="cta cta-icon theme-toggle cta-outline" title="Alterar tema">
+                    <i class="ph ph-sun"></i>
+                </button>
             </header>
 
             <div class="slot">
@@ -239,7 +243,7 @@
                             <button type="button" class="cta cta-primary" id="finalize-order">Finalizar pedido</button>
                         </div>
 
-                        <div class="form-item textarea">
+                         <div class="form-item textarea">
                             <!-- <label for="order-description">Descrição do pedido</label> -->
                             <textarea id="order-description" class="form-control" placeholder="Digite uma descrição para o pedido"></textarea>
                         </div>
